canary-deploy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-http
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  addresses:
    - type: NamedAddress
      value: gke-region-gateway

# ---
# apiVersion: gateway.networking.k8s.io/v1alpha2
# kind: Gateway
# metadata:
#   name: my-gateway
#   namespace: default
# spec:
#   gatewayClassName: gke-l7-regional-external-managed  # Specify the class for GKE L7 Managed Gateway
#   listeners:
#     - name: http-listener
#       port: 80
#       protocol: HTTP
#       routes:
#         kind: HTTPRoute
#         selector:
#           matchLabels:
#             app: my-app  # Make sure this label matches the app you're routing traffic to
