canary-deploy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: default
      port: 80
  rules:
    - backendRefs:
        - name: nginx-service
          port: 80
          weight: 25
        - name: canary-service
          port: 80
          weight: 75
